--- a/curso-kubernetes/msvc-usuarios/src/main/resources/application.properties
+++ b/curso-kubernetes/msvc-usuarios/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=msvc-usuarios
 server.port=8001
+spring.datasource.url=jdbc:mysql://localhost:3306/msvc-usuarios
+spring.datasource.username=root
+spring.datasource.password=123456Aa
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
+logging.level.org.hibernate.SQL=debug
